# cloudseeder

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  update.sh
.github/workflows/: build.yml
apps/ai_core/: .gitignore  Dockerfile  README.md  pyproject.toml  questions.json
apps/ai_core/databases/: company.json  transcription_request.json
apps/ai_core/src/ai_core/: answer_questions.py  auth_util.py  config.py  deepgram_transcription.py  error_util.py  lambda_function.py  main.py  pipeline.py  slack.py
apps/ai_core/src/ai_core/api/: __init__.py  company_api.py  config_api.py  role_api.py  transcription_api.py  transcription_request_api.py  transcription_request_service.py  transcription_result_api.py  transcription_result_service.py  user_api.py  user_service.py
apps/ai_core/src/ai_core/models/: company.py  config.py  role.py  transcription.py  transcription_request.py  transcription_result.py  user.py
apps/ai_core/src/ai_core/services/: README.md  config_service.py  transcription_request_service.py  transcription_result_service.py  user_service.py
apps/ai_core/tests/data/: conversation.json
apps/ai_engine/: .gitignore  Dockerfile  README.md  pyproject.toml  transcript_20250120_071748.json
apps/backend2/: README.md  pyproject.toml
apps/continuous_mfa/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/continuous_mfa/src/continuous_mfa/: __init__.py  auth_util.py  config.py  error_util.py  google_chat.py  invoker.py  main.py  pipeline.py
apps/continuous_mfa/src/continuous_mfa/api/: config_api.py  input_api.py  product_api.py  report_api.py  role_api.py  run_api.py  run_status_api.py  upload_file_content_api.py  user_api.py  user_product_access_api.py
apps/continuous_mfa/src/continuous_mfa/models/: config.py  input.py  product.py  report.py  run.py  run_status.py  upload_file_content.py  user.py  user_product_access.py
apps/continuous_mfa/src/continuous_mfa/services/: config_service.py  input_service.py  product_service.py  report_service.py  run_service.py  upload_file_content_service.py  user_product_access_service.py  user_service.py
apps/widget/: Dockerfile  README.md  pyproject.toml
apps/widget/src/widget/: __init__.py  auth_util.py  config.py  error_util.py  main.py
apps/widget/src/widget/api/: __init__.py  company_api.py  config_api.py  role_api.py  transcription_api.py  transcription_request_api.py  transcription_result_api.py  user_api.py  widget.py  widget_api.py
apps/widget/src/widget/models/: company.py  config.py  role.py  transcription.py  transcription_request.py  transcription_result.py  user.py  widget.py
apps/widget/tests/: test_widget.py
apps/widgets/: .env  README.md  pyproject.toml
apps/widgets/scripts/: start.sh
apps/widgets/src/widgets/: __init__.py  main.py
apps/widgets/tests/: test_widgets.py
databases/: widget.json
templates/: create_python_app.py  create_python_library.py  pyproject.toml
templates/apps/: ai_core.env  ai_core.user.json  ai_core.yml  continuous_mfa.yml  mfa_server.env  mfa_server.yml  widget.yml
templates/apps/continuous_mfa/data/databases/: product.json  run_status.json  user.json
templates/tpl/: Dockerfile  README.md  __init__.py  api_content.py  auth_util.py  config_content.py  error_util_content.py  generate_ssl.py  main_content.py  mfa_data.json  model_content.py  pyproject_content.toml  service_content.py  test_file_content.py
(+81 files in other folders)
