[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous_mfa"
version = "0.1.0"
description = "A FastAPI application in a monorepo"
authors = [{ name = "GroG Bot", email = "grogbot@robotlab-x.com" }]
requires-python = ">=3.10"
dependencies = [
    "agixtsdk",
    "boto3",
    "fastapi",
    "GitPython",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "pillow",
    "psutil",
    "pydantic",
    "pydantic-settings",
    "PyJWT",
    "python-dotenv",
    "python-multipart",
    "python-pptx",
    "pyyaml",
    "reportlab",
    "scipy",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]