[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "widget"
version = "0.1.0"
description = "A FastAPI application in a monorepo"
authors = [{ name = "GroG Bot", email = "grogbot@robotlab-x.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "tinydb"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]