[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "widgets"
version = "0.1.0"
description = "A Python application in a monorepo"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
